# prime-video-api

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
prime_video_api/: main.py
prime_video_api/cruds/: prime_videos.py
prime_video_api/routers/: prime_videos.py
prime_video_api/schemas/: prime_videos.py
